# Tarea_3.2

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.wsgi  pyproject.toml
backend/books/: __init__.py  db.py  models.py
backend/books/database_files/: ratings.csv
backend/books/migrations/: 77ea9eee68b7_initial_migration.py  authors.csv  books.csv
backend/books/templates/: authors.html  base.html  books.html  index.html
